[package]
name = "matchmaker"
version = "0.1.0"
edition = "2021"
description = "High-performance, thread-safe 5v5 real-time competitive matchmaking engine"

[dependencies]
tokio         = { version = "1", features = ["full"] }
axum          = "0.7"
dashmap       = "5"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
uuid          = { version = "1", features = ["v4", "serde"] }
rand          = "0.8"
parking_lot   = "0.12"
ordered-float = "3"
itertools     = "0.12"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
